# pgviewer

./: .gitignore  .npmrc  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
crates/pgcore/: Cargo.toml
crates/pgcore/src/: bind.rs  builder.rs  cascade.rs  error.rs  export.rs  ident.rs  info.rs  lib.rs  mutate.rs  operators.rs  pool.rs  query.rs  schema.rs  spec.rs  value.rs
crates/pgcore/tests/: builder_tests.rs  pg_integration.rs
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  state.rs  storage.rs
src-tauri/src/commands/: connection.rs  export.rs  history.rs  mod.rs  mutate.rs  query.rs  schema.rs
src/components/aggregate/: AggregateBuilder.tsx
src/components/common/: Button.tsx
src/components/connection/: ConnectionDialog.tsx
src/components/export/: ExportMenu.tsx
src/components/filters/: FilterBuilder.tsx  FilterGroupView.tsx  FilterRow.tsx
src/components/grid/: CascadeDeleteDialog.tsx  CellView.tsx  DataGrid.tsx  GridToolbar.tsx  useCellSelection.ts
src/components/history/: HistorySection.tsx  SavedSection.tsx
src/components/joins/: JoinBuilder.tsx
src/components/layout/: AppShell.tsx  ErrorBoundary.tsx  StatusBar.tsx
src/components/palette/: CommandPalette.tsx
src/components/sidebar/: ColumnsPanel.tsx  Sidebar.tsx
src/components/sql/: SqlPreview.tsx
src/hooks/: useKeyboardShortcuts.ts  useOpenDatabase.ts
src/ipc/: commands.ts  types.ts
src/lib/: cn.ts  events.ts  format.ts  monaco.ts  operators.ts  refresh.ts  sql.ts
src/stores/: connectionStore.ts  filterStore.ts  historyStore.ts  schemaStore.ts  tableViewStore.ts  uiStore.ts
