[package]
name = "pgexplorer"
version = "0.1.0"
description = "Fast PostgreSQL explorer"
edition = "2021"
rust-version = "1.77"

[lib]
# The Tauri app logic lives in a library crate so it can be reused on desktop
# and mobile. `main.rs` is a thin shim that calls `app_lib::run()`.
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
pgcore = { path = "../crates/pgcore" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
