[package]
name = "pgcore"
version = "0.1.0"
edition = "2021"
description = "Pure PostgreSQL access + SQL generation, independent of any UI toolkit."

[dependencies]
# Synchronous PostgreSQL client (wraps tokio-postgres). The `with-*` features
# turn on FromSql/ToSql integrations so we can read and bind rich column types
# (timestamps, uuids, json) when browsing and filtering.
postgres = { version = "0.19", features = [
    "with-chrono-0_4",
    "with-uuid-1",
    "with-serde_json-1",
] }
postgres-types = "0.2"
bytes = "1"
r2d2 = "0.8"
r2d2_postgres = "0.18"
native-tls = "0.2"
postgres-native-tls = "0.5"
# Arbitrary-precision decimals for the NUMERIC type, with postgres FromSql/ToSql.
rust_decimal = { version = "1", features = ["db-postgres"] }
chrono = { version = "0.4", default-features = false, features = ["std"] }
uuid = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
csv = "1"
rust_xlsxwriter = "0.79"
